# open-fars

./: .gitignore  README.md  pyproject.toml
config/: knowledge.yaml  llm_profiles.yaml  system.yaml  taskspace.yaml
paper_pool/: metadata.json
paper_pool/papers/: 1711.01224v2.txt  2010.09277v2.txt  2103.15055v1.txt  2107.05855v1.txt  2110.08653v1.txt  2211.04218v3.txt  2404.01240v1.txt  2405.05496v1.txt  2406.09723v1.txt  2409.07829v1.txt  2409.08264v2.txt  2409.09071v2.txt  2409.19010v1.txt  2412.18116v3.txt  2503.12873v1.txt  2503.19537v1.txt  2504.14603v2.txt  2506.02975v1.txt  2506.11300v2.txt  2506.13205v6.txt  2510.06042v2.txt  2511.09127v1.txt  2511.10705v1.txt  2511.14073v2.txt  2511.17303v1.txt  2511.19496v1.txt  2511.19663v1.txt  2511.22194v1.txt  2512.00846v2.txt  2512.00966v1.txt  2512.02189v2.txt  2512.02438v1.txt  2512.05941v1.txt  2512.08211v1.txt  2512.08366v2.txt  2512.08529v1.txt  2512.08992v1.txt  2512.09202v1.txt  2512.16501v1.txt  2512.17570v2.txt  (+238 more)
projects/P20260225_154453/: meta.json
projects/P20260225_195104/: meta.json
projects/P20260225_195618/: meta.json
projects/P20260225_200915/: meta.json
projects/P20260225_204638/: meta.json
projects/P20260225_215702/: meta.json
projects/P20260225_222442/: meta.json
projects/P20260225_222822/: meta.json
projects/P20260227_174805/: meta.json
projects/P20260227_194147/: meta.json
projects/P20260227_202526/: meta.json
projects/P20260303_200211/: meta.json
src/: daemon.py
src/agents/: experiment.py  ideation.py  ideation_enhanced.py  planning.py  planning_enhanced.py  writing.py
(+137 files in other folders)
